// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Text Component correctly 1`] = `
<h1
  className="sc-ifAKCX eXJAyv"
>
  Das ist ein Text
</h1>
`;

exports[`renders the Text Component correctly 2`] = `
<h2
  className="sc-EHOje iXRaeD"
>
  Das ist ein Text
</h2>
`;

exports[`renders the Text Component correctly 3`] = `
<h3
  className="sc-bZQynM eXgDVi"
>
  Das ist ein Text
</h3>
`;

exports[`renders the Text Component correctly 4`] = `
<h4
  className="sc-gzVnrw dlAZMy"
  color="error"
  scale="xl"
>
  Das ist ein Text
</h4>
`;

exports[`renders the Text Component correctly 5`] = `
<h5
  className="sc-htoDjs jDvXbi"
>
  Das ist ein Text
</h5>
`;

exports[`renders the Text Component correctly 6`] = `
<h6
  className="sc-dnqmqq qwGDE"
>
  Das ist ein Text
</h6>
`;

exports[`renders the Text Component correctly 7`] = `
<p
  className="sc-iwsKbI ciNwKd"
>
  Das ist ein Text
</p>
`;

exports[`renders the Text Component correctly 8`] = `
<a
  className="sc-gZMcBi iZDPux"
>
  Das ist ein Text
</a>
`;

exports[`renders the Text Component correctly 9`] = `
<span
  className="sc-VigVT szKXL"
>
  Das ist ein Text
</span>
`;

exports[`renders the Text Component correctly 10`] = `
<label
  className="sc-gqjmRU funJdh"
>
  Das ist ein Text
</label>
`;

exports[`renders the Text Component correctly 11`] = `
<span
  className="sc-VigVT HckDF"
  color="error"
  scale="xl"
>
  Das ist ein Text
</span>
`;
